<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bgColor"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/blue"
        android:fitsSystemWindows="true" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@android:color/holo_blue_light">

        <TextView
            android:id="@+id/regi_goback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="返回"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/user_maneger_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/register_title"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </RelativeLayout>


    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userName" />

            <EditText
                android:id="@+id/regi_userName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="请输入要注册的用户名" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <EditText
                android:id="@+id/regi_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="请输入用户名密码"
                android:password="true" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repassword" />

            <EditText
                android:id="@+id/regi_repassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:password="true"
                android:hint="请再输入一遍用户名密码"  />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/sex" />

            <RadioGroup
                android:id="@+id/regi_sex"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/regi_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/regi_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/spin_prompt" />

            <Spinner
                android:id="@+id/regi_communication_way"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/communication_way"
                android:prompt="@string/spin_prompt"
                android:spinnerMode="dropdown" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/communication_way_choice"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/telephone" />

            <EditText
                android:id="@+id/communication_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>


    <Button
        android:id="@+id/regi_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape"
        android:text="@string/register"
        android:textSize="18sp"
        android:textStyle="bold"/>


</LinearLayout>