<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@color/bgColor">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/blue"
        android:fitsSystemWindows="true" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@android:color/holo_blue_light">

        <TextView
            android:id="@+id/user_maneger_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/titleOfInstrction"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="344dp"
            android:scrollbarStyle="insideOverlay" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/agreement"
                android:textSize="18sp"/>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        >

        <RadioGroup
            android:id="@+id/agreement"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            >

            <RadioButton
                android:id="@+id/agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree" />

            <RadioButton
                android:id="@+id/disagree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/disagree" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">

        <Button
            android:id="@+id/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:text="@string/next"
            android:enabled="false"
            android:background="@drawable/shape"/>

        <Button
            android:id="@+id/gobackInAgreement"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:text="@string/goback"
            android:background="@drawable/shape"/>
    </LinearLayout>

</LinearLayout>