<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bgColor" >

    <TextView
        android:id="@+id/title_top"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/blue"
        android:fitsSystemWindows="true" />


    <RelativeLayout
        android:id="@+id/login_title"
        android:layout_below="@+id/title_top"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@android:color/holo_blue_light">

        <TextView
            android:id="@+id/login_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="返回"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/user_maneger_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/title_main"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_title"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/login_input"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/userName"
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:background="#00ffffff"
                android:hint="请输入账号"
                android:paddingLeft="10dp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:background="@drawable/divider_horizontal_line" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="#00ffffff"
            android:hint="请输入密码"
            android:inputType="textPassword"
            android:paddingLeft="10dp" />
    </LinearLayout>

   

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout01"
        android:layout_below="@+id/linearLayout01"
        android:layout_marginTop="10dp"
        android:text="是否保存密码" />

    <Button
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox1"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/login"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape"
        android:text="@string/register"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/pwdback"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/register"
        android:layout_marginRight="40dp"
        android:background="@null"
        android:text="找回密码"
        android:textSize="16sp"/>


</RelativeLayout>